re #613 fixing alignment of icon next tot title

--- a/code/media/koowa/com_koowa/less/koowa/_icons.less
+++ b/code/media/koowa/com_koowa/less/koowa/_icons.less
@@ -85,7 +85,7 @@
     height: 16px;
 
     &:before {
-        display: inline-block;
+        display: block;
         width: 16px;
         height: 16px;
         overflow: hidden;
